--- a/dev/scss/Button.css
+++ b/dev/scss/Button.css
@@ -4,7 +4,7 @@
     align-items: center;
     align-content: center;
     flex-wrap: wrap;
-    width: 60vw;
+    width: 30vw;
     max-width: 1200px;
     margin: 0 auto;
     min-height: 10vh;
@@ -14,6 +14,7 @@
     flex: 1 1 auto;
     padding: 20px;
     border: 2px solid #f7f7f7;
+
     text-align: center;
     text-transform: uppercase;
     position: relative;
@@ -27,7 +28,10 @@
     content: '';
     width: 0;
     bottom: 0;
-    background: #f7f7f7;
+    transform: scale(1.25);
+    /*background: #f7f7f7;*/
     color: rgba(86,232,212,1);
+    border: 2px solid rgba(86,232,212,1);
+
 }
 
