--- a/dev/scss/Footer.css
+++ b/dev/scss/Footer.css
@@ -1,11 +1,13 @@
 .Footer {
-    background: #ccc;
+    /*background: #ccc;*/
+    background: #69676d;
     color: white;
     position: absolute;
     bottom: 0;
     width: 100%;
     height: 180px;
     text-align: center;
+    margin-right: 2px;
 }
 
 .footer-stuff {
@@ -19,6 +21,7 @@ ul {
 a {
     text-decoration: none;
     color: white;
+    /*color: #006699;*/
     font-size: 1em;
 }
 
