--- a/dev/scss/Header.css
+++ b/dev/scss/Header.css
@@ -2,14 +2,15 @@
     background: #222222;
     color: white;
     position: relative;
-    top: 0;
+    top: -20px;
     width: 100%;
     height: 80px;
     text-align: center;
     font-family: sans-serif;
 }
 
-.header-stuff {
-    margin: 0 auto;
-}
+.Header > h1 {
+    top: 20px;
+    position: relative;
 
+}
