--- a/dev/scss/App.css
+++ b/dev/scss/App.css
@@ -4,7 +4,7 @@
 
 body {
   background: linear-gradient(135deg, rgba(85,239,203,1) 0%,rgba(30,87,153,1) 0%,rgba(85,239,203,1) 0%,rgba(91,202,255,1) 100%);
-  color: #f7f7f7;
+  color: #69676d;
   font-family: 'Lato', sans-serif;
   font-weight: 300;
   position:relative;
@@ -53,3 +53,94 @@ h1:hover {
 
 }
 
+h2:hover {
+  /*color: #006699;*/
+  /*color: #55EFCB;*/
+  color: #39EFD1;
+  transition: .3s;
+
+}
+
+.space-around {
+    margin: 15px;
+}
+
+.Buttoncontainer {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    align-content: center;
+    flex-wrap: wrap;
+    width: 15vw;
+    max-width: 1200px;
+    margin: 0 auto;
+    min-height: 10vh;
+}
+
+.btn {
+    flex: 1 1 auto;
+    padding: 15px;
+    /*border: 2px solid #f7f7f7;*/
+    border-radius: 8px;
+    margin-top: 5em;
+    text-align: center;
+    text-transform: uppercase;
+    position: relative;
+    overflow: hidden;
+    transition: .3s;
+    border: 2px solid #006699;
+    color: #006699;
+}
+
+.btn:hover {
+    cursor: pointer;
+    transition: .3s;
+    content: '';
+    width: 0;
+    bottom: 0;
+    transform: scale(1.25);
+    /*background: #f7f7f7;*/
+    color: rgba(86, 232, 212, 1);
+    border: 2px solid rgba(86, 232, 212, 1);
+}
+
+
+
+
+
+@-webkit-keyframes fadeIn { from { opacity:0; } to { opacity:1; } }
+@-moz-keyframes fadeIn { from { opacity:0; } to { opacity:1; } }
+@keyframes fadeIn { from { opacity:0; } to { opacity:1; } }
+
+.fade-in {
+  opacity:0;  /* make things invisible upon start */
+  -webkit-animation:fadeIn ease-in 1;  /* call our keyframe named fadeIn, use animattion ease-in and repeat it only 1 time */
+  -moz-animation:fadeIn ease-in 1;
+  animation:fadeIn ease-in 1;
+
+  -webkit-animation-fill-mode:forwards;  /* this makes sure that after animation is done we remain at the last keyframe value (opacity: 1)*/
+  -moz-animation-fill-mode:forwards;
+  animation-fill-mode:forwards;
+
+  -webkit-animation-duration:1s;
+  -moz-animation-duration:1s;
+  animation-duration:1s;
+}
+
+.fade-in.one {
+  -webkit-animation-delay: 0.4s;
+  -moz-animation-delay: 0.4s;
+  animation-delay: 0.4s;
+}
+
+.fade-in.two {
+  -webkit-animation-delay: 2s;
+  -moz-animation-delay: 2s;
+  animation-delay: 2s;
+}
+
+.fade-in.three {
+  -webkit-animation-delay: 3s;
+  -moz-animation-delay: 3s;
+  animation-delay: 3s;
+}
