style + 2 routes :sparkles:

--- a/dev/scss/Footer.css
+++ b/dev/scss/Footer.css
@@ -6,7 +6,7 @@
     bottom: 0;
     width: 100%;
     height: 180px;
-    text-align: center;
+    text-align: left;
     margin-right: 2px;
 }
 
@@ -27,7 +27,8 @@ a {
 
 a:hover {
     cursor: pointer;
-    color: rgba(86,232,212,1);
+    /*color: rgba(86,232,212,1);*/
+    /*color: rgba(97, 218, 251, 1);*/
     transition: .3s;
     text-transform: uppercase;
 }
