--- a/dev/scss/Header.css
+++ b/dev/scss/Header.css
@@ -1,6 +1,8 @@
 .Header {
     background: #222222;
-    color: white;
+    /*color: white;*/
+    color: #69676d;
+
     position: relative;
     top: -20px;
     width: 100%;
