--- a/dev/scss/App.css
+++ b/dev/scss/App.css
@@ -1,146 +1,203 @@
 #root {
-  margin: 2px;
+    margin: 2px;
 }
 
 body {
-  background: linear-gradient(135deg, rgba(85,239,203,1) 0%,rgba(30,87,153,1) 0%,rgba(85,239,203,1) 0%,rgba(91,202,255,1) 100%);
-  color: #69676d;
-  font-family: 'Lato', sans-serif;
-  font-weight: 300;
-  position:relative;
-  overflow-x: hidden;
-  margin: -2px 2px;
+    /*background: linear-gradient(135deg, rgba(85, 239, 203, 1) 0%, rgba(30, 87, 153, 1) 0%, rgba(85, 239, 203, 1) 0%, rgba(91, 202, 255, 1) 100%);*/
+    color: #69676d;
+    background: #1d1d1d;
+    font-family: Roboto, "Helvetica Neue", Arial, sans-serif;
+    font-weight: 300;
+    position: relative;
+    overflow-x: hidden;
+    margin: -2px 2px;
+}
+
+* {
+    z-index: 100;
 }
 
 .App {
-  text-align: center;
-  background-color: #2c2b2c;
-  height: 1200px;
-}
-
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 80px;
+    /*background: linear-gradient(135deg, rgba(85,239,203,1) 0%,rgba(30,87,153,1) 0%,rgba(85,239,203,1) 0%,rgba(91,202,255,1) 100%);*/
+    text-align: center;
+    height: 1200px;
 }
 
 .App-header {
-  background-color: #222;
-  height: 150px;
-  padding: 20px;
-  color: white;
+    background-color: #222;
+    padding: 20px;
+    display: flex;
+    max-width: 100%;
+    color: rgba(97, 218, 251, 1);
+}
+
+.App-logo {
+    background: url('../../images/logo.svg');
+    animation: App-logo-spin infinite 20s linear;
+    height: 80px;
+    width: 100px;
+    display: inline-block;
+    margin-top: 21px;
+}
+
+.App-title {
+    padding-top: 10px;
+    padding-bottom: 10px;
+}
+
+.col-6 {
+    display: inline-block;
+    width: 45%;
+    margin-top: 10%;
 }
 
 .App-intro {
-  font-size: large;
+    font-size: large;
 }
 
 @keyframes App-logo-spin {
-  from { transform: rotate(0deg); }
-  to { transform: rotate(360deg); }
+    from {
+        transform: rotate(0deg);
+    }
+    to {
+        transform: rotate(360deg);
+    }
 }
 
 h2 {
-  color: #006699;
-  /*color: #55EFCB;*/
-  /*color: #39EFD1;*/
-}
-
-h1:hover {
-  /*color: #006699;*/
-  /*color: #55EFCB;*/
-  color: #39EFD1;
-  transition: .3s;
-
-}
-
-h2:hover {
-  /*color: #006699;*/
-  /*color: #55EFCB;*/
-  color: #39EFD1;
-  transition: .3s;
-
+    color: #006699;
 }
 
 .space-around {
     margin: 15px;
 }
 
-.Buttoncontainer {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    align-content: center;
-    flex-wrap: wrap;
-    width: 15vw;
-    max-width: 1200px;
-    margin: 0 auto;
-    min-height: 10vh;
-}
-
-.btn {
-    flex: 1 1 auto;
-    padding: 15px;
-    /*border: 2px solid #f7f7f7;*/
-    border-radius: 8px;
-    margin-top: 5em;
-    text-align: center;
-    text-transform: uppercase;
-    position: relative;
+.button-square {
+    width: 200px; height: 80px;
     overflow: hidden;
-    transition: .3s;
-    border: 2px solid #006699;
-    color: #006699;
-}
-
-.btn:hover {
+    position: relative;
     cursor: pointer;
-    transition: .3s;
-    content: '';
-    width: 0;
-    bottom: 0;
-    transform: scale(1.25);
-    /*background: #f7f7f7;*/
-    color: rgba(86, 232, 212, 1);
-    border: 2px solid rgba(86, 232, 212, 1);
+    margin: 15px;
+    border-radius: 6px;
+    float: left;
 }
 
+.button {
+    background: #1d1d1d;
+    font-family: 'Orbitron', sans-serif;
+    font-size: 1.2em;
+    text-align: center;
+    /*color: #fff;*/
+    position: absolute;
+    top: 3px;
+    left: 3px;
+}
 
+.button-square .button {
+    width: 194px;
+    line-height: 74px;
+    border-radius: 5px;
+}
 
+.button-circle .button {
+    width: 74px; height: 74px;
+    border-radius: 100%;
+}
 
+.gradient, .gradient:after {
+    display: block;
+    content: " ";
+    width: 400px; height: 80px;
+    background: #55EFCB;
+    background: -moz-linear-gradient(-45deg,  #55EFCB 0%, #61DAFB 18%, #66ffff 42%, #61DAFB 62%, #55EFCB 82%, #61DAFB 100%);
+    background: -webkit-gradient(linear, left top, right bottom, color-stop(0%,#55EFCB), color-stop(18%,#61DAFB), color-stop(42%,#66ffff), color-stop(62%,#61DAFB), color-stop(82%,#55EFCB), color-stop(100%,#61DAFB));
+    background: -webkit-linear-gradient(-45deg,  #55EFCB 0%,#61DAFB 18%,#66ffff 42%, #61DAFB 62%,#55EFCB 82%,#61DAFB 100%);
+    background: -o-linear-gradient(-45deg,  #55EFCB 0%,#61DAFB 18%,#66ffff 42%,#61DAFB 62%,#55EFCB 82%,#61DAFB 100%);
+    background: -ms-linear-gradient(-45deg,  #55EFCB 0%,#61DAFB 18%,#66ffff 42%,#61DAFB 62%,#55EFCB 82%,#61DAFB 100%);
+    background: linear-gradient(135deg,  #55EFCB 0%,#61DAFB 18%,#66ffff 42%,#61DAFB 62%,#55EFCB 82%,#55EFCB 100%);
+}
 
-@-webkit-keyframes fadeIn { from { opacity:0; } to { opacity:1; } }
-@-moz-keyframes fadeIn { from { opacity:0; } to { opacity:1; } }
-@keyframes fadeIn { from { opacity:0; } to { opacity:1; } }
+.gradient {
+    animation: 8s anim linear infinite;
+}
+
+.gradient:after {
+    transform: translateX(400px);
+}
+
+@keyframes anim{
+    0% {transform: translateX(0px) ;}
+    100% {transform: translateX(-400px) ;}
+}
+
+@-webkit-keyframes fadeIn {
+    from {
+        opacity: 0;
+    }
+    to {
+        opacity: 1;
+    }
+}
+
+@-moz-keyframes fadeIn {
+    from {
+        opacity: 0;
+    }
+    to {
+        opacity: 1;
+    }
+}
+
+@keyframes fadeIn {
+    from {
+        opacity: 0;
+    }
+    to {
+        opacity: 1;
+    }
+}
 
 .fade-in {
-  opacity:0;  /* make things invisible upon start */
-  -webkit-animation:fadeIn ease-in 1;  /* call our keyframe named fadeIn, use animattion ease-in and repeat it only 1 time */
-  -moz-animation:fadeIn ease-in 1;
-  animation:fadeIn ease-in 1;
+    opacity: 0; /* make things invisible upon start */
+    -webkit-animation: fadeIn ease-in 1; /* call our keyframe named fadeIn, use animation ease-in and repeat it only 1 time */
+    -moz-animation: fadeIn ease-in 1;
+    animation: fadeIn ease-in 1;
 
-  -webkit-animation-fill-mode:forwards;  /* this makes sure that after animation is done we remain at the last keyframe value (opacity: 1)*/
-  -moz-animation-fill-mode:forwards;
-  animation-fill-mode:forwards;
+    -webkit-animation-fill-mode: forwards; /* this makes sure that after animation is done we remain at the last keyframe value (opacity: 1)*/
+    -moz-animation-fill-mode: forwards;
+    animation-fill-mode: forwards;
 
-  -webkit-animation-duration:1s;
-  -moz-animation-duration:1s;
-  animation-duration:1s;
+    -webkit-animation-duration: 1s;
+    -moz-animation-duration: 1s;
+    animation-duration: 1s;
 }
 
 .fade-in.one {
-  -webkit-animation-delay: 0.4s;
-  -moz-animation-delay: 0.4s;
-  animation-delay: 0.4s;
+    -webkit-animation-delay: 0.4s;
+    -moz-animation-delay: 0.4s;
+    animation-delay: 0.4s;
 }
 
 .fade-in.two {
-  -webkit-animation-delay: 2s;
-  -moz-animation-delay: 2s;
-  animation-delay: 2s;
+    -webkit-animation-delay: 2s;
+    -moz-animation-delay: 2s;
+    animation-delay: 2s;
 }
 
 .fade-in.three {
-  -webkit-animation-delay: 3s;
-  -moz-animation-delay: 3s;
-  animation-delay: 3s;
+    -webkit-animation-delay: 3s;
+    -moz-animation-delay: 3s;
+    animation-delay: 3s;
+}
+
+.fade-in.four {
+    -webkit-animation-delay: 4s;
+    -moz-animation-delay: 4s;
+    animation-delay: 4s;
+}
+
+.fade-in.five {
+    -webkit-animation-delay: 5s;
+    -moz-animation-delay: 5s;
+    animation-delay: 5s;
 }
